# storage_model

./: CMakeLists.txt  main.cpp
back/: main.cpp
front/App/: App.cpp  App.h
front/ProductCard/: ProductCard.cpp  ProductCard.h
front/res/: Sprite-0001.aseprite
